--- a/index.html
+++ b/index.html
@@ -29,9 +29,25 @@
 				</div>
 			</div>
 		</div>
+		<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#newModal" id="newGame">New Game</button>
+			<div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="smallModal" aria-hidden="true">
+			  <div class="modal-dialog modal-sm">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <h4 class="modal-title" id="myModalLabel">CHOOSE YOUR TEAM</h4>
+			      </div>
+			      <div class="modal-body">
+			        <button type="button" id="chooseX" data-dismiss="modal" class="btn btn-danger">X</button>
+			        <button type="button" id="chooseO" data-dismiss="modal"class="btn btn-success">O</button>
+			      </div>
+			    </div>
+			  </div>
+			</div>
 	</div>
 	<script language="JavaScript" type="text/javascript"src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script language="JavaScript" type="text/javascript"src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<script language="JavaScript" type="text/javascript" src="script.js"></script>
 </body>
 </html>
