--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<div class="container-fluid text-center">
 		<h1>Tic Tac Toe</h1>
 		<div id="chalkboard">
+			<h2 id="won">Won:</h2>
+			<h2 id="lost">Lost:</h2>
+			<h2 id="tied">Tied:</h2>
 			<div id="game">
 				<div class ="row toprow">
 					<div id="box1" class="box"></div>
@@ -28,22 +31,23 @@
 					<div id="box9" class="box"></div>
 				</div>
 			</div>
+			<h3 id="status"></h3>
 		</div>
 		<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#newModal" id="newGame">New Game</button>
-			<div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="smallModal" aria-hidden="true">
-			  <div class="modal-dialog modal-sm">
-			    <div class="modal-content">
-			      <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			        <h4 class="modal-title" id="myModalLabel">CHOOSE YOUR TEAM</h4>
-			      </div>
-			      <div class="modal-body">
-			        <button type="button" id="chooseX" data-dismiss="modal" class="btn btn-danger">X</button>
-			        <button type="button" id="chooseO" data-dismiss="modal"class="btn btn-success">O</button>
-			      </div>
-			    </div>
-			  </div>
+		<div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="smallModal" aria-hidden="true">
+			<div class="modal-dialog modal-sm">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h4 class="modal-title" id="myModalLabel">CHOOSE YOUR TEAM</h4>
+					</div>
+					<div class="modal-body">
+						<button type="button" id="chooseX" data-dismiss="modal" class="btn btn-danger">X</button>
+						<button type="button" id="chooseO" data-dismiss="modal"class="btn btn-success">O</button>
+					</div>
+				</div>
 			</div>
+		</div>
 	</div>
 	<script language="JavaScript" type="text/javascript"src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script language="JavaScript" type="text/javascript"src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
