--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<div class="container-fluid text-center">
 		<h1>Tic Tac Toe</h1>
 		<div id="chalkboard">
-			<h2 id="won">Won:</h2>
-			<h2 id="lost">Lost:</h2>
-			<h2 id="tied">Tied:</h2>
+			<h2 id="won">Won: 0</h2>
+			<h2 id="lost">Lost: 0</h2>
+			<h2 id="tied">Tied: 0</h2>
 			<div id="game">
 				<div class ="row toprow">
 					<div id="box1" class="box"></div>
@@ -33,7 +33,7 @@
 			</div>
 			<h3 id="status"></h3>
 		</div>
-		<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#newModal" id="newGame">New Game</button>
+		<button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#newModal" id="newGame">New Game</button>
 		<div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="smallModal" aria-hidden="true">
 			<div class="modal-dialog modal-sm">
 				<div class="modal-content">
@@ -52,6 +52,7 @@
 	<script language="JavaScript" type="text/javascript"src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script language="JavaScript" type="text/javascript"src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<script src='https://cdn.rawgit.com/admsev/jquery-play-sound/master/jquery.playSound.js'></script>
 	<script language="JavaScript" type="text/javascript" src="script.js"></script>
 </body>
 </html>
